// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vscode-stylelint lint test should work on css 1`] = `
Array [
  Object {
    "code": Object {
      "target": Object {
        "authority": "stylelint.io",
        "path": "/user-guide/rules/indentation",
        "scheme": "https",
      },
      "value": "indentation",
    },
    "message": "Expected indentation of 4 spaces (indentation)",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 2,
      },
      "start": Object {
        "character": 2,
        "line": 2,
      },
    },
    "severity": 0,
    "source": "stylelint",
  },
]
`;

exports[`vscode-stylelint lint test should work on markdown 1`] = `
Array [
  Object {
    "code": Object {
      "target": Object {
        "authority": "stylelint.io",
        "path": "/user-guide/rules/indentation",
        "scheme": "https",
      },
      "value": "indentation",
    },
    "message": "Expected indentation of 4 spaces (indentation)",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 4,
      },
      "start": Object {
        "character": 2,
        "line": 4,
      },
    },
    "severity": 0,
    "source": "stylelint",
  },
]
`;

exports[`vscode-stylelint lint test should work on scss 1`] = `
Array [
  Object {
    "code": Object {
      "target": Object {
        "authority": "stylelint.io",
        "path": "/user-guide/rules/indentation",
        "scheme": "https",
      },
      "value": "indentation",
    },
    "message": "Expected indentation of 4 spaces (indentation)",
    "range": Object {
      "end": Object {
        "character": 2,
        "line": 2,
      },
      "start": Object {
        "character": 2,
        "line": 2,
      },
    },
    "severity": 0,
    "source": "stylelint",
  },
]
`;
